--- a/album_1/index.html
+++ b/album_1/index.html
@@ -202,6 +202,33 @@
                 font-size: 12px
             }
         } */
+
+
+        #lyrics-wrap {
+            position: relative;
+            /* чтобы полоска внутри позиционировалась */
+        }
+
+        #pause-bar {
+            position: absolute;
+            bottom: 10px;
+            /* чуть снизу */
+            left: 50%;
+            transform: translateX(-50%);
+            width: 200px;
+            height: 6px;
+            background: #555;
+            border-radius: 3px;
+            overflow: hidden;
+            display: none;
+        }
+
+        #pause-bar-fill {
+            height: 100%;
+            width: 0%;
+            background: white;
+            transition: width 0.1s linear;
+        }
     </style>
 </head>
 
@@ -211,6 +238,10 @@
         <div class="lyrics-wrap">
             <div class="lines">
                 <ul class="lines-list" id="lines"></ul>
+            </div>
+
+            <div id="pause-bar">
+                <div id="pause-bar-fill"></div>
             </div>
         </div>
 
