--- a/album_1/index.html
+++ b/album_1/index.html
@@ -88,7 +88,7 @@
             padding: 0;
             margin: 0;
             position: relative;
-            transition: transform 1000ms cubic-bezier(.2, .9, .3, 1)
+            transition: transform .25s cubic-bezier(.2, .9, .3, 1)
         }
 
         .lines-list li {
@@ -103,7 +103,7 @@
             margin: calc(100 / 428 * 32 * 1vw) 0 calc(100 / 428 * 32 * 1vw) 0;
             /* color: var(--muted); */
             opacity: 0.25;
-            transition: transform .5s, opacity .5s
+            transition: transform .25s, opacity .25s
         }
 
         .lines-list li.active {
