--- a/album_3/2/index.html
+++ b/album_3/2/index.html
@@ -5,6 +5,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>Karaoke timing player</title>
+    <script src="https://telegram.org/js/telegram-web-app.js"></script>
+
     <style>
         @font-face {
             font-family: 'Sf Pro Display Regular';
