--- a/album_3/2/index.html
+++ b/album_3/2/index.html
@@ -10,17 +10,17 @@
     <style>
         @font-face {
             font-family: 'Sf Pro Display Regular';
-            src: url('../../fonts/SFPRODISPLAYREGULAR.OTF') format('truetype')
+            src: url('../../../fonts/SFPRODISPLAYREGULAR.OTF') format('truetype')
         }
 
         @font-face {
             font-family: 'Sf Pro Display Medium';
-            src: url('../../SFPRODISPLAYMEDIUM.OTF') format('truetype')
+            src: url('../../../SFPRODISPLAYMEDIUM.OTF') format('truetype')
         }
 
         @font-face {
             font-family: 'Sf Pro Display Bold';
-            src: url('../../SFPRODISPLAYBOLD.OTF') format('truetype')
+            src: url('../../../SFPRODISPLAYBOLD.OTF') format('truetype')
         }
 
         :root {
