--- a/album_3/index.html
+++ b/album_3/index.html
@@ -107,6 +107,16 @@
             </svg>
         </div>
 
+        <div class="album" onclick="hapticFeedback('soft', '8_inst')">
+            <img src="../img/album-3-cover.jpg">
+            <span>8. GPT (минус)</span>
+            <svg fill="#97979D" viewBox="0 0 512 512">
+                <path
+                    d="M278.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-160 160c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L210.7 256 73.4 118.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l160 160z">
+                </path>
+            </svg>
+        </div>
+
         <div class="album" onclick="hapticFeedback('soft', '9')">
             <img src="../img/album-3-cover.jpg">
             <span>9. Крылья</span>
