--- a/album_3/song/index.html
+++ b/album_3/song/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>Karaoke timing player</title>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
-    <link href="charts.css" rel="stylesheet" />
+    <link href="styles.css" rel="stylesheet" />
 </head>
 
 <body>
