--- a/album_2/index.html
+++ b/album_2/index.html
@@ -17,9 +17,19 @@
 
     <div class="albums">
 
+        <div class="album" onclick="hapticFeedback('soft', 'song?number=1')">
+            <img src="../img/album-2-cover.jpg">
+            <span>1. Где ты</span>
+            <svg fill="#97979D" viewBox="0 0 512 512">
+                <path
+                    d="M278.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-160 160c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L210.7 256 73.4 118.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l160 160z">
+                </path>
+            </svg>
+        </div>
+
         <div class="album" onclick="hapticFeedback('soft', 'song?number=2')">
-            <img src="../img/album-3-cover.jpg">
-            <span>2. Ragnarok</span>
+            <img src="../img/album-2-cover.jpg">
+            <span>2. 24101989</span>
             <svg fill="#97979D" viewBox="0 0 512 512">
                 <path
                     d="M278.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-160 160c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L210.7 256 73.4 118.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l160 160z">
@@ -27,95 +37,6 @@
             </svg>
         </div>
 
-        <div class="album" onclick="hapticFeedback('soft', 'song?number=3')">
-            <img src="../img/album-3-cover.jpg">
-            <span>3. Панк</span>
-            <svg fill="#97979D" viewBox="0 0 512 512">
-                <path
-                    d="M278.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-160 160c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L210.7 256 73.4 118.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l160 160z">
-                </path>
-            </svg>
-        </div>
-
-        <div class="album" onclick="hapticFeedback('soft', 'song?number=4')">
-            <img src="../img/album-3-cover.jpg">
-            <span>4. Штефангейт</span>
-            <svg fill="#97979D" viewBox="0 0 512 512">
-                <path
-                    d="M278.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-160 160c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L210.7 256 73.4 118.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l160 160z">
-                </path>
-            </svg>
-        </div>
-
-        <div class="album" onclick="hapticFeedback('soft', 'song?number=5')">
-            <img src="../img/album-3-cover.jpg">
-            <span>5. Памяти Алексея Навального</span>
-            <svg fill="#97979D" viewBox="0 0 512 512">
-                <path
-                    d="M278.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-160 160c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L210.7 256 73.4 118.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l160 160z">
-                </path>
-            </svg>
-        </div>
-
-        <div class="album" onclick="hapticFeedback('soft', 'song?number=6')">
-            <img src="../img/album-3-cover.jpg">
-            <span>6. Покупай</span>
-            <svg fill="#97979D" viewBox="0 0 512 512">
-                <path
-                    d="M278.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-160 160c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L210.7 256 73.4 118.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l160 160z">
-                </path>
-            </svg>
-        </div>
-
-        <div class="album" onclick="hapticFeedback('soft', 'song?number=7')">
-            <img src="../img/album-3-cover.jpg">
-            <span>7. Америка</span>
-            <svg fill="#97979D" viewBox="0 0 512 512">
-                <path
-                    d="M278.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-160 160c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L210.7 256 73.4 118.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l160 160z">
-                </path>
-            </svg>
-        </div>
-
-        <div class="album" onclick="hapticFeedback('soft', 'song?number=8')">
-            <img src="../img/album-3-cover.jpg">
-            <span>8. GPT</span>
-            <svg fill="#97979D" viewBox="0 0 512 512">
-                <path
-                    d="M278.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-160 160c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L210.7 256 73.4 118.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l160 160z">
-                </path>
-            </svg>
-        </div>
-
-        <div class="album" onclick="hapticFeedback('soft', '8_inst')">
-            <img src="../img/album-3-cover.jpg">
-            <span>8. GPT (минус)</span>
-            <svg fill="#97979D" viewBox="0 0 512 512">
-                <path
-                    d="M278.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-160 160c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L210.7 256 73.4 118.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l160 160z">
-                </path>
-            </svg>
-        </div>
-
-        <div class="album" onclick="hapticFeedback('soft', 'song?number=9')">
-            <img src="../img/album-3-cover.jpg">
-            <span>9. Крылья</span>
-            <svg fill="#97979D" viewBox="0 0 512 512">
-                <path
-                    d="M278.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-160 160c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L210.7 256 73.4 118.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l160 160z">
-                </path>
-            </svg>
-        </div>
-
-        <div class="album" onclick="hapticFeedback('soft', 'song?number=10')">
-            <img src="../img/album-3-cover.jpg">
-            <span>10. Туманный мир</span>
-            <svg fill="#97979D" viewBox="0 0 512 512">
-                <path
-                    d="M278.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-160 160c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L210.7 256 73.4 118.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l160 160z">
-                </path>
-            </svg>
-        </div>
 
     </div>
 
